package valid;

public interface BookInterface {
    void deliver();
}
