package valid;

public class BookWarehouse {
    void deliverBook(BookInterface bookInterface) {
        bookInterface.deliver();
    }
}
