package valid;

public class DigitalBookInterface implements BookInterface {
    public void deliver() {
        System.out.println("Delivered to you library. Check it out in your account!");
    }
}
